testdata/parser/negative/18.txt
Parse error at 18.pdl:7:11: Unindexable expression
	y[0] = (x+y)[0];
	         ^
